#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([pp], [1.0], [a.arepo@gmail.com])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

m4_pattern_allow([AM_INIT_AUTOMAKE])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h inttypes.h limits.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS([alarm gettimeofday memset strcasecmp strtoull])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
